Fixed width on mobile screens.

--- a/src/components/ImageOption/ImageOption.css
+++ b/src/components/ImageOption/ImageOption.css
@@ -1,3 +1,3 @@
 .image-option-container {
-    width: 30rem;
+    max-width: 30rem;
 }
