--- a/src/components/TextOption/TextOption.css
+++ b/src/components/TextOption/TextOption.css
@@ -1,3 +1,3 @@
 .text-option-container {
-    width: 30rem;
+    max-width: 30rem;
 }
